# LibTensorFlow

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
script/: bash_install_libtf.sh  bash_run.sh
